@@ -1,3 +1,10 @@
+2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* class.c (check_methods): Move virtual destructor to end of
+	method list, if abi_cxx_vdp_declared_last.
+	(create_vtable_ptr): Move virtual destructors to end of vtable if 
+	abi_cxx_vdp_last_in_vtable.
+
 2003-11-24  Nathan Sidwell  <nathan@codesourcery.com>
 
 	Add vestigial dtor parameter
