@@ -1,3 +1,13 @@
+2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* target.h (gcc_target): Add abi structure.
+	* target-def.h (TARGET_ABI_CXX_VIRTUAL_DTORS_POSITION): New.
+	(TARGET_ABI): New.
+	(TARGET_INITIALIZER): Add TARGET_ABI.
+	* config/ia64/ia64.c (TARGET_ABI_CXX_VIRTUAL_DTORS_POSITION): Override
+	on HPUX
+	* doc/tm.texi (TARGET_ABI_CXX_VIRTUAL_DTORS_POSITION): Document.
+
 2003-11-16  Nick Clifton  <nickc@redhat.com>
 
 	* config/stormy16/stormy16.h (BUILD_VA_LIST_TYPE): Delete.
